--- a/notebook/example.ipynb
+++ b/notebook/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -54,13 +54,344 @@
        "DataIngestionConfig(dataset_download_url='sjbckjb', tgz_download_dir='kjfkjbf', raw_data_dir='kdbb', ingested_train_dir='ksfbkef', ingested_test_dir='kjbvebf')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data_ingestion_config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import yaml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\acer\\\\FSDS\\\\PROJECTS\\\\ML\\\\machine_learning_project\\\\notebook'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(\"c:\\\\Users\\\\acer\\\\FSDS\\\\PROJECTS\\\\ML\\\\machine_learning_project\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\acer\\\\FSDS\\\\PROJECTS\\\\ML\\\\machine_learning_project'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.dockerignore',\n",
+       " '.git',\n",
+       " '.github',\n",
+       " '.gitignore',\n",
+       " 'app.py',\n",
+       " 'build',\n",
+       " 'config',\n",
+       " 'dist',\n",
+       " 'Dockerfile',\n",
+       " 'housing',\n",
+       " 'housing_predictor.egg-info',\n",
+       " 'LICENSE',\n",
+       " 'logs',\n",
+       " 'notebook',\n",
+       " 'README.md',\n",
+       " 'requirements.txt',\n",
+       " 'setup.py',\n",
+       " 'venv',\n",
+       " '__pycache__']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.listdir(\".\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config_file_path = os.path.join(\"config\", \"config.yaml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'config\\\\config.yaml'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config_file_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.exists(config_file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\acer\\\\FSDS\\\\PROJECTS\\\\ML\\\\machine_learning_project'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config_info = None\n",
+    "with open(config_file_path, \"rb\") as yaml_file:\n",
+    "    config_info = yaml.safe_load(yaml_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'training_pipeline_config': {'pipeline_name': 'housing',\n",
+       "  'artifact_dir': 'artifact'},\n",
+       " 'data_ingestion_config': {'dataset_download_url': 'https://raw.githubusercontent.com/ageron/handson-ml/master/datasets/housing/housing.tgz',\n",
+       "  'raw_data_dir': 'raw_data',\n",
+       "  'tgz_download_dir': 'tgz_data',\n",
+       "  'ingested_dir': 'ingested_data',\n",
+       "  'ingested_train_dir': 'train',\n",
+       "  'ingested_test_dir': 'test'},\n",
+       " 'data_validation_config': {'schema_dir': 'config',\n",
+       "  'schema_file_name': 'schema.yaml',\n",
+       "  'report_file_name': 'report.json',\n",
+       "  'report_page_file_name': 'report.html'},\n",
+       " 'data_transformation_config': {'add_bedroom_per_room': True,\n",
+       "  'transformed_dir': 'transformed_data',\n",
+       "  'transformed_train_dir': 'train',\n",
+       "  'transformed_test_dir': 'test',\n",
+       "  'preprocessing_dir': 'preprocessed',\n",
+       "  'preprocessed_object_file_name': 'preprocessed.pkl'},\n",
+       " 'model_trainer_config': {'trained_model_dir': 'trained_model',\n",
+       "  'model_file_name': 'model.pkl',\n",
+       "  'base_accuracy': 0.6,\n",
+       "  'model_config_dir': 'config',\n",
+       "  'model_config_file_name': 'model.yaml'},\n",
+       " 'model_evaluation_config': {'model_evaluation_file_name': 'model_evaluation.yaml'},\n",
+       " 'model_pusher_config': {'model_export_dir': 'saved_models'}}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'dataset_download_url': 'https://raw.githubusercontent.com/ageron/handson-ml/master/datasets/housing/housing.tgz',\n",
+       " 'raw_data_dir': 'raw_data',\n",
+       " 'tgz_download_dir': 'tgz_data',\n",
+       " 'ingested_dir': 'ingested_data',\n",
+       " 'ingested_train_dir': 'train',\n",
+       " 'ingested_test_dir': 'test'}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config_info[\"data_ingestion_config\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_yaml_file(file_path:str)->dict:\n",
+    "    \"\"\"\n",
+    "    Reads a YAML file and returns the contents as a dictionary\n",
+    "    file_path: str\n",
+    "    \"\"\"\n",
+    "\n",
+    "    try:\n",
+    "        with open(file_path, \"rb\") as yaml_file:\n",
+    "            return yaml.safe_load(yaml_file)\n",
+    "    except Exception as e:\n",
+    "        raise e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = read_yaml_file(config_file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from housing.constant import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'training_pipeline_config'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TRAINING_PIPELINE_CONFIG_KEY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'pipeline_name': 'housing', 'artifact_dir': 'artifact'}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config[TRAINING_PIPELINE_CONFIG_KEY]"
    ]
   },
   {
